add img description and ingridients for 1st recipe

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/scrambledeggs.html">
+            Scrambled eggs with garlic and mozzarella
+        </a>
     </body>
 </html>
