--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -5,7 +5,19 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Scrambled eggs with <br>garlic and mozzarella</h1>
+        <h1>Scrambled eggs with</h1>
+        <h1>garlic and mozzarella</h1>
         <img src="../images/eggs.jpg" width="300" alt="Tasty Juicy Scrambled Eggs">
+            <h2>Description</h2>
+                <p> This recipe will turn you into a professional omelet-maker. </p>
+                <p> Its easy, beautiful and delicious.</p>
+            <h2>Ingridients</h2>
+                <ul>
+                    <li><strong>chicken eggs <em>2 pike</em></strong></li>
+                    <li><strong></strong> cheese <em>50 g</em></strong></li>
+                    <li><strong>sunflower oil <em>1 spoon</em></strong></li>
+                    <li><strong> garlic <em>1 clove</em></strong></li>
+                </ul>
+
     </body>
 </html>
