--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -13,7 +13,7 @@
                 <p> Its easy, beautiful and delicious.</p>
             <h2>Ingridients</h2>
                 <ul>
-                    <li><strong>Chicken eggs <em>2 pike</em></strong></li>
+                    <li><strong>2 Chicken eggs</strong></li>
                     <li><strong>Mozzarella cheese <em>50 g</em></strong></li>
                     <li><strong>Sunflower oil <em>1 spoon</em></strong></li>
                     <li><strong>Garlic <em>1 clove</em></strong></li>
@@ -22,12 +22,13 @@
             <h2>Steps</h2>
                 <ol>
                     <li>Chop the garlic into small pieces and grate the cheese.</li>
-                    <li>Pour oil into a frying pan and heat over medium heat for 1 minute.</li>
-                    <li>Break the eggs into the pan and wait 1 minute until white color appears.</li>
+                    <li>Pour oil into a frying pan and heat over medium temperature for 1 minute.</li>
+                    <li>Break the eggs into the fryind pan and wait 1 minute until white color appears.</li>
                     <li>Sprinkle with salt and mix the eggs for 1-2 minutes (the main thing is not to overcook)</li>
                     <li>Sprinkle with cheese and stir for another 30 seconds</li>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
+        <a href="../index.html">Return to start page</a>
 
     </body>
 </html>
