Sort recipes links to unordered list, correct some of grammatic mistakes, add startpage link to 2snd recipe

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Odin recipes</title>
+        <title>My recipes</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/scrambledeggs.html">
-            Scrambled eggs with garlic and mozzarella
-        </a>
+        <h1>My favourite recipes</h1>
+            <a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a>
+            <a href="./recipes/marigoldtea.html">Marigold-en tea</a>
     </body>
 </html>
