add index image and some minor changes

--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Golden Marigold Tea</h1>
-        <img src="../images/marigold.png" alt="cup of marigold tea">
+        <h1>Marigold-<em>en</em> Tea</h1>
+        <img src="../images/marigold.png" width="400" alt="cup of marigold tea">
             <h2>Description</h2>
                 <p>This recipe introduces you to aromatic marigold tea.</p>
                 <p>Marigold tea have a huge list of healing properties. </p>
@@ -14,7 +14,7 @@
             <h2>Ingridients</h2>
                 <ul>
                     <li><strong>3-5 dry marigold flowers</strong></li>
-                    <li><strong>Boiling water<em>300-400 ml</em></strong></li>
+                    <li><strong>300-400 ml of Boiling water </strong></li>
                 </ul>
             <h2>Steps</h2>
                 <ol>
@@ -22,7 +22,8 @@
                     <li>Pour over the flowers with boiling water, then immediately drain the water.</li>
                     <li>Pour the marigolds with boiling water, stirring.</li>
                     <li>Wait for 5-7 minutes. Your's magic tea is ready!</li>
-                    <li>pour into cups and enjoy!</li>
+                    <li>Pour into cups and enjoy!</li>
                 </ol>
+        <a href="../index.html">Return to start page</a>
     </body>
 </html>
