--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -14,16 +14,16 @@
             <h2>Ingridients</h2>
                 <ul>
                     <li><strong>2 Chicken eggs</strong></li>
-                    <li><strong>Mozzarella cheese <em>50 g</em></strong></li>
-                    <li><strong>Sunflower oil <em>1 spoon</em></strong></li>
-                    <li><strong>Garlic <em>1 clove</em></strong></li>
+                    <li><strong>50 g of mozzarella cheese </strong></li>
+                    <li><strong>1 spoon of sunflower oil </strong></li>
+                    <li><strong>1 garlic clove</strong></li>
                     <li><strong>A pinch of salt</strong></li>
                 </ul>
             <h2>Steps</h2>
                 <ol>
                     <li>Chop the garlic into small pieces and grate the cheese.</li>
                     <li>Pour oil into a frying pan and heat over medium temperature for 1 minute.</li>
-                    <li>Break the eggs into the fryind pan and wait 1 minute until white color appears.</li>
+                    <li>Break the eggs into the frying pan and wait 1 minute until white color appears.</li>
                     <li>Sprinkle with salt and mix the eggs for 1-2 minutes (the main thing is not to overcook)</li>
                     <li>Sprinkle with cheese and stir for another 30 seconds</li>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
