--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>My favourite recipes</h1>
-            <a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a>
-            <a href="./recipes/marigoldtea.html">Marigold-en tea</a>
+        <h1>Some of my favourite recipes</h1>
+        <ul>
+            <li><a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a></li>
+            <li><a href="./recipes/marigoldtea.html">Marigold-<em>en</em> tea</a></li>
+        </ul>
     </body>
 </html>
