--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Some of my favourite recipes</h1>
+        <h1>Some of my favorite recipes</h1>
+        <img src="./images/catcook.jpg" width="300" alt="Master Chef-Cat and his mouse-junior">
         <ul>
             <li><a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a></li>
             <li><a href="./recipes/marigoldtea.html">Marigold-<em>en</em> tea</a></li>
