add 3rd recipe and return to top links

--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -5,7 +5,26 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Royal buckwheat porrige</h1>
-        
+        <h1 id="header">Royal buckwheat porrige</h1>
+        <img src="../images/buckwheat.jpg" alt="a portion of buckwheat porrige">
+            <p>Оbviously, the best of porridges.</p>
+            <p>Really sorry for those who didn't try it.</p>
+        <h2>Ingridients</h2>
+            <ul>
+                <li><strong>200 g of buckwheat</strong></li>
+                <li><strong>400 ml of water</strong></li>
+                <li><strong>salt to taste</strong></li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Sort out and wash buckwheat groats.</li>
+                <li>Pour into a pan and fill with water.</li>
+                <li>Let it boil under the lid, add salt.</li>
+                <li>Remove the lid and cook until the liquid wastes (some water should remain on the bottom).</li>
+                <li>Remove from heat and let stand covered for 10 minutes.The royal meal is ready!</li>
+            </ol>
+        <a href="#header">Return to top</a>
+        <a href="../index.html">Return to start page</a>           
+                  
     </body>
 </html>
