--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Marigold-<em>en</em> Tea</h1>
+        <h1 id="header">Marigold-<em>en</em> Tea</h1>
         <img src="../images/marigold.png" width="400" alt="cup of marigold tea">
             <h2>Description</h2>
                 <p>This recipe introduces you to aromatic marigold tea.</p>
@@ -24,6 +24,7 @@
                     <li>Wait for 5-7 minutes. Your's magic tea is ready!</li>
                     <li>Pour into cups and enjoy!</li>
                 </ol>
+        <a href="#header">Return to top</a>
         <a href="../index.html">Return to start page</a>
     </body>
 </html>
