--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Scrambled eggs with</h1>
+        <h1 id="header">Scrambled eggs with</h1>
         <h1>garlic and mozzarella</h1>
         <img src="../images/eggs.jpg" width="300" alt="Tasty Juicy Scrambled Eggs">
             <h2>Description</h2>
@@ -28,6 +28,7 @@
                     <li>Sprinkle with cheese and stir for another 30 seconds</li>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
+        <a href="#header">Return to top</a>
         <a href="../index.html">Return to start page</a>
 
     </body>
