sort links on recipe pages in unordered lists

--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -24,7 +24,9 @@
                     <li>Wait for 5-7 minutes. Your's magic tea is ready!</li>
                     <li>Pour into cups and enjoy!</li>
                 </ol>
-        <a href="#header">Return to top</a>
-        <a href="../index.html">Return to start page</a>
+                <ul>
+                    <li><a href="#header">Return to top</a></li>
+                    <li><a href="../index.html">Return to start page</a></li>
+                </ul>
     </body>
 </html>
