--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -28,8 +28,10 @@
                     <li>Sprinkle with cheese and stir for another 30 seconds</li>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
-        <a href="#header">Return to top</a>
-        <a href="../index.html">Return to start page</a>
+                <ul>
+                    <li><a href="#header">Return to top</a></li>
+                    <li><a href="../index.html">Return to start page</a></li>
+                </ul>
 
     </body>
 </html>
