--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -23,8 +23,9 @@
                 <li>Remove the lid and cook until the liquid wastes (some water should remain on the bottom).</li>
                 <li>Remove from heat and let stand covered for 10 minutes.The royal meal is ready!</li>
             </ol>
-        <a href="#header">Return to top</a>
-        <a href="../index.html">Return to start page</a>           
-                  
+            <ul>
+                <li><a href="#header">Return to top</a></li>
+                <li><a href="../index.html">Return to start page</a></li>          
+            </ul>          
     </body>
 </html>
