--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a></li>
             <li><a href="./recipes/marigoldtea.html">Marigold-<em>en</em> tea</a></li>
+            <li><a href="./recipes/buckwheat.html">Royal buckwheat porridge</a></li>
         </ul>
     </body>
 </html>
