changed visual form of links from unordered list to usual text

--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -28,10 +28,11 @@
                     <li>Sprinkle with cheese and stir for another 30 seconds</li>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
-                <ul>
-                    <li><a href="#header">Return to top</a></li>
-                    <li><a href="../index.html">Return to start page</a></li>
-                </ul>
+                
+        <a href="#header">Return to top</a>
+        <div></div>
+        <a href="../index.html">Return to start page</a>
+                
 
     </body>
 </html>
