add styles for index

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>My recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Some of my favorite recipes</h1>
-        <img src="./images/catcook.jpg" width="300" alt="Master Chef-Cat and his mouse-junior">
-        <ul>
-            <li><a href="./recipes/scrambledeggs.html">Scrambled eggs with garlic and mozzarella</a></li>
-            <li><a href="./recipes/marigoldtea.html">Marigold-<em>en</em> tea</a></li>
-            <li><a href="./recipes/buckwheat.html">Royal buckwheat porridge</a></li>
-        </ul>
+        <h1 class="header1 border">Some of my favorite recipes</h1>
+        <img class="image" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">
+        <div class ="buttons border">
+            <a  href="./recipes/scrambledeggs.html"><button class="btn">Scrambled eggs with garlic and mozzarella</button></a><br><br>
+            <a  href="./recipes/marigoldtea.html"><button class="btn">Marigold-en tea</button></a><br><br>
+            <a  href="./recipes/buckwheat.html"><button class="btn">Royal buckwheat porridge</button></a>
+        </div>
     </body>
 </html>
