--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -24,9 +24,8 @@
                     <li>Wait for 5-7 minutes. Your's magic tea is ready!</li>
                     <li>Pour into cups and enjoy!</li>
                 </ol>
-                <ul>
-                    <li><a href="#header">Return to top</a></li>
-                    <li><a href="../index.html">Return to start page</a></li>
-                </ul>
+        <a href="#header">Return to top</a>
+        <div></div>
+        <a href="../index.html">Return to start page</a>
     </body>
 </html>
