--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -23,9 +23,8 @@
                 <li>Remove the lid and cook until the liquid wastes (some water should remain on the bottom).</li>
                 <li>Remove from heat and let stand covered for 10 minutes.The royal meal is ready!</li>
             </ol>
-            <ul>
-                <li><a href="#header">Return to top</a></li>
-                <li><a href="../index.html">Return to start page</a></li>          
-            </ul>          
+    <a href="#header">Return to top</a>
+    <div></div>
+    <a href="../index.html">Return to start page</a>
     </body>
 </html>
