add CSS for all pages

--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./recipestyles.css">
         <title>Scrambled eggs</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <h1 id="header">Scrambled eggs with</h1>
-        <h1>garlic and mozzarella</h1>
-        <img src="../images/eggs.jpg" width="300" alt="Tasty Juicy Scrambled Eggs">
+        <h1 id="header">Scrambled eggs with garlic and mozzarella</h1>
+        <img src="../images/eggs.jpg" alt="Tasty Juicy Scrambled Eggs">
             <h2>Description</h2>
-                <p> This recipe will turn you into a professional omelet-maker. </p>
-                <p> Its easy, beautiful and delicious.</p>
+                <p> This recipe will turn you into a professional omelet-maker.
+                    <br> Its easy, beautiful and delicious.
+                </p>
             <h2>Ingridients</h2>
-                <ul>
-                    <li><strong>2 Chicken eggs</strong></li>
-                    <li><strong>50 g of mozzarella cheese </strong></li>
-                    <li><strong>1 spoon of sunflower oil </strong></li>
-                    <li><strong>1 garlic clove</strong></li>
+                <ul class="border">
+                    <li><strong>2 Chicken eggs</strong></li><br>
+                    <li><strong>50 g of mozzarella cheese </strong></li><br>
+                    <li><strong>1 spoon of sunflower oil </strong></li><br>
+                    <li><strong>1 garlic clove</strong></li><br>
                     <li><strong>A pinch of salt</strong></li>
                 </ul>
             <h2>Steps</h2>
-                <ol>
-                    <li>Chop the garlic into small pieces and grate the cheese.</li>
-                    <li>Pour oil into a frying pan and heat over medium temperature for 1 minute.</li>
-                    <li>Break the eggs into the frying pan and wait 1 minute until white color appears.</li>
-                    <li>Sprinkle with salt and mix the eggs for 1-2 minutes (the main thing is not to overcook)</li>
-                    <li>Sprinkle with cheese and stir for another 30 seconds</li>
+                <ol class="border">
+                    <li>Chop the garlic into small pieces and grate the cheese.</li><br>
+                    <li>Pour oil into a frying pan and heat over medium temperature for 1 minute.</li><br>
+                    <li>Break the eggs into the frying pan and wait 1 minute until white color appears.</li><br>
+                    <li>Sprinkle with salt and mix the eggs for 1-2 minutes (the main thing is not to overcook)</li><br>
+                    <li>Sprinkle with cheese and stir for another 30 seconds</li><br>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
                 
-        <a href="#header">Return to top</a>
-        <div></div>
-        <a href="../index.html">Return to start page</a>
+        <a href="#header"><button>Return to top</button></a>
+        <br><br>
+        <a href="../index.html"><button>Return to start page</button></a>
                 
 
     </body>
