--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./recipestyles.css">
         <title>Marigold tea</title>
         <meta charset="utf-8">
     </head>
     <body>
         <h1 id="header">Marigold-<em>en</em> Tea</h1>
-        <img src="../images/marigold.png" width="400" alt="cup of marigold tea">
+        <img src="../images/marigold.png" alt="cup of marigold tea">
             <h2>Description</h2>
-                <p>This recipe introduces you to aromatic marigold tea.</p>
-                <p>Marigold tea have a huge list of healing properties. </p>
-                <p>Also it very tasty.</p>
+                <p>This recipe introduces you to aromatic marigold tea.
+                <br>Marigold tea have a huge list of healing properties.
+                <br>Also it very tasty.</p>
             <h2>Ingridients</h2>
-                <ul>
-                    <li><strong>3-5 dry marigold flowers</strong></li>
+                <ul class="border">
+                    <li><strong>3-5 dry marigold flowers</strong></li><br>
                     <li><strong>300-400 ml of Boiling water </strong></li>
                 </ul>
             <h2>Steps</h2>
-                <ol>
-                    <li>Drop flowers into empty teapot.</li>
-                    <li>Pour over the flowers with boiling water, then immediately drain the water.</li>
-                    <li>Pour the marigolds with boiling water, stirring.</li>
-                    <li>Wait for 5-7 minutes. Your's magic tea is ready!</li>
+                <ol class="border">
+                    <li>Drop flowers into empty teapot.</li><br>
+                    <li>Pour over the flowers with boiling water, then immediately drain the water.</li><br>
+                    <li>Pour the marigolds with boiling water, stirring.</li><br>
+                    <li>Wait for 5-7 minutes. Your's magic tea is ready!</li><br>
                     <li>Pour into cups and enjoy!</li>
                 </ol>
-        <a href="#header">Return to top</a>
-        <div></div>
-        <a href="../index.html">Return to start page</a>
+        <a href="#header"><button>Return to top</button></a>
+        <br><br>
+        <a href="../index.html"><button>Return to start page</button></a>
     </body>
 </html>
