add animation and fixed position to buttons for better visibility

--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -22,11 +22,10 @@
                 <li>Sort out and wash buckwheat groats.</li><br>
                 <li>Pour into a pan and fill with water.</li><br>
                 <li>Let it boil under the lid, add salt.</li><br>
-                <li>Remove the lid and cook until the liquid wastes (some water should remain on the bottom).</li><br>
+                <li>Remove the lid and cook until the liquid avoparates (some water should remain on the bottom).</li><br>
                 <li>Remove from heat and let stand covered for 10 minutes.The royal meal is ready!</li>
             </ol>
-    <a href="#header"><button>Return to top</button></a>
-    <div></div>
-    <a href="../index.html"><button>Return to start page</button></a>
+    <a href="#header"><button class="but1pos">Return to top</button></a>
+    <a href="../index.html"><button class="but2pos">Return to start page</button></a>
     </body>
 </html>
