--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -30,9 +30,8 @@
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
                 
-        <a href="#header"><button>Return to top</button></a>
-        <br><br>
-        <a href="../index.html"><button>Return to start page</button></a>
+        <a href="#header"><button class="but1pos">Return to top</button></a>
+        <a href="../index.html"><button class="but2pos">Return to start page</button></a>
                 
 
     </body>
