--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -25,8 +25,7 @@
                     <li>Wait for 5-7 minutes. Your's magic tea is ready!</li><br>
                     <li>Pour into cups and enjoy!</li>
                 </ol>
-        <a href="#header"><button>Return to top</button></a>
-        <br><br>
-        <a href="../index.html"><button>Return to start page</button></a>
+        <a href="#header"><button class="but1pos">Return to top</button></a>
+        <a href="../index.html"><button class="but2pos">Return to start page</button></a>
     </body>
 </html>
