delete index picture and add button pictures

--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     </head>
     <body>
         <h1 class="header1 border">Some of my favorite recipes</h1>
-        <img class="image" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">
-        <div class ="buttons border">
-            <a  href="./recipes/scrambledeggs.html"><button class="btn">Scrambled eggs with garlic and mozzarella</button></a><br><br>
-            <a  href="./recipes/marigoldtea.html"><button class="btn">Marigold-en tea</button></a><br><br>
-            <a  href="./recipes/buckwheat.html"><button class="btn">Royal buckwheat porridge</button></a>
+        <!--<img class="image" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">-->
+        <div class="buttons">
+            <a  href="./recipes/scrambledeggs.html">
+                <button class="btn">
+                    <img class="image" src="./images/eggs.jpg"  alt="Scrambled eggs">
+                    Scrambled eggs 
+                </button>
+            </a><br><br>
+            <a  href="./recipes/marigoldtea.html">
+                <button class="btn">
+                    <img class="image" src="./images/marigold.png"  alt="Marigold tea">
+                    Marigold-en tea
+                </button>
+            </a><br><br>
+            <a  href="./recipes/buckwheat.html">
+                <button class="btn">
+                    <img class="image" src="./images/buckwheat.jpg"  alt="Buckwheat porrige">
+                    Buckwheat porridge
+                </button>
+            </a>
         </div>
     </body>
 </html>
