changes with sizes and margins of buttons

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1 id="header" ></h1>
         <h1 class="header1 border">Some of my favorite recipes</h1>
-        <!--<img class="image" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">-->
+        <!--<img class="image1" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">-->
         <div class="buttons">
             <a  href="./recipes/scrambledeggs.html">
                 <button class="btn">
                     <img class="image" src="./images/eggs.jpg"  alt="Scrambled eggs">
                     Scrambled eggs 
                 </button>
-            </a><br><br>
+            </a><br><br><br>
             <a  href="./recipes/marigoldtea.html">
                 <button class="btn">
                     <img class="image" src="./images/marigold.png"  alt="Marigold tea">
                     Marigold-en tea
                 </button>
-            </a><br><br>
+            </a><br><br><br>
             <a  href="./recipes/buckwheat.html">
                 <button class="btn">
                     <img class="image" src="./images/buckwheat.jpg"  alt="Buckwheat porrige">
