--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1 id="header">Marigold-<em>en</em> Tea</h1>
+        <div id="header"><br></div>
+        <h1>Marigold-<em>en</em> Tea</h1>
         <img src="../images/marigold.png" alt="cup of marigold tea">
             <h2>Description</h2>
                 <p>This recipe introduces you to aromatic marigold tea.
@@ -26,6 +27,6 @@
                     <li>Pour into cups and enjoy!</li>
                 </ol>
         <a href="#header"><button class="but1pos">Return to top</button></a>
-        <a href="../index.html"><button class="but2pos">Return to start page</button></a>
+        <a href="../index.html"><button class="but2pos">Home</button></a>
     </body>
 </html>
