--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1 id="header">Scrambled eggs with garlic and mozzarella</h1>
+        <div id="header"><br></div>
+        <h1>Scrambled eggs with garlic and mozzarella</h1>
         <img src="../images/eggs.jpg" alt="Tasty Juicy Scrambled Eggs">
             <h2>Description</h2>
                 <p> This recipe will turn you into a professional omelet-maker.
@@ -31,7 +32,7 @@
                 </ol>
                 
         <a href="#header"><button class="but1pos">Return to top</button></a>
-        <a href="../index.html"><button class="but2pos">Return to start page</button></a>
+        <a href="../index.html"><button class="but2pos">Home</button></a>
                 
 
     </body>
