--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1 id="header">Royal buckwheat porrige</h1>
+        <div id="header"><br></div>
+        <h1>Royal buckwheat porrige</h1>
         <img src="../images/buckwheat.jpg" alt="a portion of buckwheat porrige">
         <h2>Description</h2>
             <p>Оbviously, the best of porridges.
@@ -26,6 +27,6 @@
                 <li>Remove from heat and let stand covered for 10 minutes.The royal meal is ready!</li>
             </ol>
     <a href="#header"><button class="but1pos">Return to top</button></a>
-    <a href="../index.html"><button class="but2pos">Return to start page</button></a>
+    <a href="../index.html"><button class="but2pos">Home</button></a>
     </body>
 </html>
