optimize css code and minor visuality changes(remove strong text)

--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -14,9 +14,9 @@
             <br>Really sorry for those who didn't try it.</p>
         <h2>Ingridients</h2>
             <ul class="border">
-                <li><strong>200 g of buckwheat</strong></li><br>
-                <li><strong>400 ml of water</strong></li><br>
-                <li><strong>salt to taste</strong></li>
+                <li>200 g of buckwheat groats</li><br>
+                <li>400 ml of water</li><br>
+                <li>salt to taste</li>
             </ul>
         <h2>Steps</h2>
             <ol class="border">
