--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -15,8 +15,8 @@
                 <br>Also it very tasty.</p>
             <h2>Ingridients</h2>
                 <ul class="border">
-                    <li><strong>3-5 dry marigold flowers</strong></li><br>
-                    <li><strong>300-400 ml of Boiling water </strong></li>
+                    <li>3-5 dry marigold flowers</li><br>
+                    <li>300-400 ml of Boiling water</li>
                 </ul>
             <h2>Steps</h2>
                 <ol class="border">
