--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -15,11 +15,11 @@
                 </p>
             <h2>Ingridients</h2>
                 <ul class="border">
-                    <li><strong>2 Chicken eggs</strong></li><br>
-                    <li><strong>50 g of mozzarella cheese </strong></li><br>
-                    <li><strong>1 spoon of sunflower oil </strong></li><br>
-                    <li><strong>1 garlic clove</strong></li><br>
-                    <li><strong>A pinch of salt</strong></li>
+                    <li>2 Chicken eggs</li><br>
+                    <li>50 g of mozzarella cheese </li><br>
+                    <li>1 spoon of sunflower oil </li><br>
+                    <li>1 garlic clove</li><br>
+                    <li>A pinch of salt></li>
                 </ul>
             <h2>Steps</h2>
                 <ol class="border">
