remove gramatic error from text

--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -19,7 +19,7 @@
                     <li>50 g of mozzarella cheese </li><br>
                     <li>1 spoon of sunflower oil </li><br>
                     <li>1 garlic clove</li><br>
-                    <li>A pinch of salt></li>
+                    <li>A pinch of salt</li>
                 </ul>
             <h2>Steps</h2>
                 <ol class="border">
