add footers, fonts and some color fixes

--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -4,10 +4,11 @@
         <link rel="stylesheet" href="./recipestyles.css">
         <title>Buckwheat porrige</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt|Secular+One|Indie+Flower|Luckiest+Guy|Monoton|Patrick+Hand&effect=neon|outline|anaglyph">
+
     </head>
     <body>
-        <div id="header"><br></div>
-        <h1>Royal buckwheat porrige</h1>
+        <h1 id="header">Royal buckwheat porrige</h1>
         <img src="../images/buckwheat.jpg" alt="a portion of buckwheat porrige">
         <h2>Description</h2>
             <p>Оbviously, the best of porridges.
@@ -28,5 +29,7 @@
             </ol>
     <a href="#header"><button class="but1pos">Return to top</button></a>
     <a href="../index.html"><button class="but2pos">Home</button></a>
+    <div class="footer">broNickOne(c) for The Odin Project 2022</div>
+
     </body>
 </html>
