--- a/recipes/marigoldtea.html
+++ b/recipes/marigoldtea.html
@@ -4,10 +4,11 @@
         <link rel="stylesheet" href="./recipestyles.css">
         <title>Marigold tea</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt|Secular+One|Indie+Flower|Luckiest+Guy|Monoton|Patrick+Hand&effect=neon|outline|anaglyph">
+
     </head>
     <body>
-        <div id="header"><br></div>
-        <h1>Marigold-<em>en</em> Tea</h1>
+        <h1 id="header">Marigold-<em>en</em> Tea</h1>
         <img src="../images/marigold.png" alt="cup of marigold tea">
             <h2>Description</h2>
                 <p>This recipe introduces you to aromatic marigold tea.
@@ -28,5 +29,7 @@
                 </ol>
         <a href="#header"><button class="but1pos">Return to top</button></a>
         <a href="../index.html"><button class="but2pos">Home</button></a>
+        <div class="footer">broNickOne(c) for The Odin Project 2022</div>
+
     </body>
 </html>
