--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <title>My recipes</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt|Indie+Flower|Luckiest+Guy|Monoton&effect=neon|outline|anaglyph">
+
     </head>
     <body>
-        <h1 id="header" ></h1>
         <h1 class="header1 border">Some of my favorite recipes</h1>
         <!--<img class="image1" src="./images/catcook.jpg"  alt="Master Chef-Cat and his mouse-junior">-->
         <div class="buttons">
-            <a  href="./recipes/scrambledeggs.html">
+            <a href="./recipes/scrambledeggs.html">
                 <button class="btn">
                     <img class="image" src="./images/eggs.jpg"  alt="Scrambled eggs">
                     Scrambled eggs 
@@ -19,7 +20,7 @@
             <a  href="./recipes/marigoldtea.html">
                 <button class="btn">
                     <img class="image" src="./images/marigold.png"  alt="Marigold tea">
-                    Marigold-en tea
+                    Marigold tea
                 </button>
             </a><br><br><br>
             <a  href="./recipes/buckwheat.html">
@@ -29,5 +30,6 @@
                 </button>
             </a>
         </div>
+        <div class="footer">broNickOne(c) for The Odin Project 2022</div>
     </body>
 </html>
