--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -31,7 +31,7 @@
                     <li>Sprinkle with cheese and stir for another 30 seconds</li><br>
                     <li>Sprinkle with garlic, stir, cover and wait 1 minute. The dish is ready!</li>
                 </ol>
-        <div class="footer">broNickOne(c) for The Odin Project 2022</div>        
+        <div class="footer">Copyright © 2022 broNickOne for The Odin Project </div>        
         <div class="buttons">
             <a href="#header"><button class="but1pos">Return to top</button></a>
             <a href="../index.html"><button class="but2pos">Home</button></a>
