--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <title>My recipes</title>
@@ -30,6 +30,6 @@
                 </button>
             </a>
         </div>
-        <div class="footer">broNickOne(c) for The Odin Project 2022</div>
+        <div class="footer">Copyright © 2022 broNickOne for The Odin Project </div>
     </body>
 </html>
