--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -29,7 +29,7 @@
             </ol>
     <a href="#header"><button class="but1pos">Return to top</button></a>
     <a href="../index.html"><button class="but2pos">Home</button></a>
-    <div class="footer">broNickOne(c) for The Odin Project 2022</div>
+    <div class="footer">Copyright © 2022 broNickOne for The Odin Project </div>
 
     </body>
 </html>
