fix colors / add mobile screen support for recipes pages

--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="./recipestyles.css">
         <title>Scrambled eggs</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt|Secular+One|Indie+Flower|Luckiest+Guy|Monoton|Patrick+Hand&effect=neon|outline|anaglyph">
 
     </head>
