--- a/recipes/buckwheat.html
+++ b/recipes/buckwheat.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="./recipestyles.css">
         <title>Buckwheat porrige</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt|Secular+One|Indie+Flower|Luckiest+Guy|Monoton|Patrick+Hand&effect=neon|outline|anaglyph">
 
